Second post, home grid is messed uop on mobile will fix

--- a/_sass/partials/_layout.scss
+++ b/_sass/partials/_layout.scss
@@ -135,4 +135,8 @@ footer {
       @include relative-font-size(1.125);
     }
   }
+
+  p:first-of-type {
+    border-style: double;
+  }
 }
